--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "c9be1090-a6eb-4857-8138-a255f6984d83"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
